@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ANDNA 8"
-.TH ANDNA 8 "2005-10-27" "NetsukukuD 0.0.4b" ""
+.TH ANDNA 8 "2005-11-03" "NetsukukuD 0.0.4b" ""
 .SH "NAME"
 ANDNA \- Abnormal Netsukuku Domain Name Anarchy
 .SH "DESCRIPTION"
@@ -178,12 +178,10 @@ The \fInetsukuku_d\fR\|(8) daemon runs also a \s-1DNS\s0 wrapper which receives 
 queries for hostnames resolution. The hostnames are resolved in \s-1ANDNA\s0, then the
 \&\s-1DNS\s0 wrapper will reply to the requester.
 .PP
-In this way to use \s-1ANDNA\s0 with all the actual programs just put \f(CW\*(C`localhost\*(C'\fR in
-the list of \s-1DNS\s0 servers used by your system. For example: 
-.PP
-# cp /etc/resolv.conf /etc/resolv.conf.bak
-.PP
-# echo \*(L"nameserver 127.0.0.1\*(R" > /etc/resolv.conf
+When the \fInetsukuku_d\fR\|(8) daemon is started it copies /etc/resolv.conf in
+/etc/resolv.conf.bak and adds in the first line of /etc/resolv.conf the
+\&\*(L"nameserver 127.0.0.1\*(R" string. When it is closed it moves back
+/etc/resolv.conf.bak to /etc/resolv.conf.
 .PP
 All the resolved hostnames are kept, until their expiration date, in the
 \&\f(CW\*(C`resolved hostnames cache\*(C'\fR. The entire cache is flushed each time the
