@@ -338,8 +338,10 @@ int destroy_netsukuku(void)
 	
 	ntk_save_maps();
 	ntk_free_maps();
-	if(!server_opt.disable_andna)
+	if(!server_opt.disable_andna) {
 		andna_save_caches();
+		andna_close();
+	}
 	close_radar();
 	e_rnode_free(&me.cur_erc, &me.cur_erc_counter);
 	destroy_accept_tbl();
